# user-service/src/main/java/ru/maxb/soulmate/profile/model/Gender.java
@@ -1,0 +1,5 @@
+package ru.maxb.soulmate.profile.model;
+
+public enum Gender {
+    male, female
+}
